is-libzip-sys/src/docs_zip.rs

extern "C" {
    pub fn zip_set_default_password(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_set_file_compression(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_int32_t,
        arg4: zip_uint32_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_begin_write(arg1: *mut zip_source_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_begin_write_cloning(
        arg1: *mut zip_source_t,
        arg2: zip_uint64_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_buffer(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_void,
        arg3: zip_uint64_t,
        arg4: ::std::os::raw::c_int,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_buffer_create(
        arg1: *const ::std::os::raw::c_void,
        arg2: zip_uint64_t,
        arg3: ::std::os::raw::c_int,
        arg4: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_buffer_fragment(
        arg1: *mut zip_t,
        arg2: *const zip_buffer_fragment_t,
        arg3: zip_uint64_t,
        arg4: ::std::os::raw::c_int,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_buffer_fragment_create(
        arg1: *const zip_buffer_fragment_t,
        arg2: zip_uint64_t,
        arg3: ::std::os::raw::c_int,
        arg4: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_close(arg1: *mut zip_source_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_commit_write(arg1: *mut zip_source_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_error(arg1: *mut zip_source_t) -> *mut zip_error_t;
}
extern "C" {
    pub fn zip_source_file(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_uint64_t,
        arg4: zip_int64_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_file_create(
        arg1: *const ::std::os::raw::c_char,
        arg2: zip_uint64_t,
        arg3: zip_int64_t,
        arg4: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_filep(
        arg1: *mut zip_t,
        arg2: *mut FILE,
        arg3: zip_uint64_t,
        arg4: zip_int64_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_filep_create(
        arg1: *mut FILE,
        arg2: zip_uint64_t,
        arg3: zip_int64_t,
        arg4: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_free(arg1: *mut zip_source_t);
}
extern "C" {
    pub fn zip_source_function(
        arg1: *mut zip_t,
        arg2: zip_source_callback,
        arg3: *mut ::std::os::raw::c_void,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_function_create(
        arg1: zip_source_callback,
        arg2: *mut ::std::os::raw::c_void,
        arg3: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_get_file_attributes(
        arg1: *mut zip_source_t,
        arg2: *mut zip_file_attributes_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_is_deleted(arg1: *mut zip_source_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_keep(arg1: *mut zip_source_t);
}
extern "C" {
    pub fn zip_source_make_command_bitmap(arg1: zip_source_cmd_t, ...) -> zip_int64_t;
}
extern "C" {
    pub fn zip_source_open(arg1: *mut zip_source_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_read(
        arg1: *mut zip_source_t,
        arg2: *mut ::std::os::raw::c_void,
        arg3: zip_uint64_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_source_rollback_write(arg1: *mut zip_source_t);
}
extern "C" {
    pub fn zip_source_seek(
        arg1: *mut zip_source_t,
        arg2: zip_int64_t,
        arg3: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_seek_compute_offset(
        arg1: zip_uint64_t,
        arg2: zip_uint64_t,
        arg3: *mut ::std::os::raw::c_void,
        arg4: zip_uint64_t,
        arg5: *mut zip_error_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_source_seek_write(
        arg1: *mut zip_source_t,
        arg2: zip_int64_t,
        arg3: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_stat(arg1: *mut zip_source_t, arg2: *mut zip_stat_t)
        -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_tell(arg1: *mut zip_source_t) -> zip_int64_t;
}
extern "C" {
    pub fn zip_source_tell_write(arg1: *mut zip_source_t) -> zip_int64_t;
}
extern "C" {
    pub fn zip_source_write(
        arg1: *mut zip_source_t,
        arg2: *const ::std::os::raw::c_void,
        arg3: zip_uint64_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_source_zip(
        arg1: *mut zip_t,
        arg2: *mut zip_t,
        arg3: zip_uint64_t,
        arg4: zip_flags_t,
        arg5: zip_uint64_t,
        arg6: zip_int64_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_stat(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_flags_t,
        arg4: *mut zip_stat_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_stat_index(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
        arg4: *mut zip_stat_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_stat_init(arg1: *mut zip_stat_t);
}
extern "C" {
    pub fn zip_strerror(arg1: *mut zip_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_unchange(arg1: *mut zip_t, arg2: zip_uint64_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_unchange_all(arg1: *mut zip_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_unchange_archive(arg1: *mut zip_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_compression_method_supported(
        method: zip_int32_t,
        compress: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_encryption_method_supported(
        method: zip_uint16_t,
        encode: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout___va_list_tag() {
    assert_eq!(
        ::std::mem::size_of::<__va_list_tag>(),
        24usize,
        concat!("Size of: ", stringify!(__va_list_tag))
    );
    assert_eq!(
        ::std::mem::align_of::<__va_list_tag>(),
        8usize,
        concat!("Alignment of ", stringify!(__va_list_tag))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).gp_offset as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(gp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).fp_offset as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(fp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).overflow_arg_area as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(overflow_arg_area)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).reg_save_area as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(reg_save_area)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __locale_data {
    pub _address: u8,
}
